--- a/index.html
+++ b/index.html
@@ -126,6 +126,23 @@
       </div>
     </main>
 
+    <!-- Modal -->
+     <!-- Open the modal using ID.showModal() method -->
+<!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
+<dialog id="news-details-modal" class="modal modal-bottom sm:modal-middle">
+  <div class="modal-box">
+    <div id="modalContainer">
+
+    </div>
+    <div class="modal-action">
+      <form method="dialog">
+        <!-- if there is a button in form, it will close the modal -->
+        <button class="btn">Close</button>
+      </form>
+    </div>
+  </div>
+</dialog>
+
     <script src="./js/script.js"></script>
   </body>
 </html>
